--- a/HorizontalScrollMenu/res/layout/horizontal_scroll_menu.xml
+++ b/HorizontalScrollMenu/res/layout/horizontal_scroll_menu.xml
@@ -25,7 +25,7 @@
         </LinearLayout>
     </HorizontalScrollView>
 
-    <android.support.v4.view.ViewPager
+    <com.lynnchurch.horizontalscrollmenu.MyViewPager
         android:id="@+id/vp_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
